# instagram-dms

./: .gitignore  README.md  instagram_dms.spec  pyproject.toml
src/: instagram_dms.py
