[project]
name = "instagram-dms"
version = "0.2.1"
description = "Distraction-free way to view Instagram DMs on Desktop"
authors = [
    { name = "Dania Rifki", email = "atomicnumberphi@gmail.com" }
]
dependencies = [
    "pywebview>=5.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.10.0",
]
